[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Themes/title.theme" type="Theme" id=1]
[ext_resource path="res://Scenes/Themes/themes.theme" type="Theme" id=2]
[ext_resource path="res://Scenes/Menu/Credits.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/menu_click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/menu_hover.wav" type="AudioStream" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 163.0
margin_top = 120.0
margin_right = 860.0
margin_bottom = 480.0
custom_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 697.0
margin_bottom = 160.0
theme = ExtResource( 1 )
text = "RELIT"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 697.0
margin_bottom = 360.0
theme = ExtResource( 2 )
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 697.0
margin_bottom = 107.0
theme = ExtResource( 2 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 697.0
margin_bottom = 33.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 71.0
margin_right = 415.0
margin_bottom = 33.0
text = "Art design by "

[node name="Desmond" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 419.0
margin_right = 625.0
margin_bottom = 33.0
text = "Desmond"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 37.0
margin_right = 697.0
margin_bottom = 70.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soundtrack" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 476.0
margin_bottom = 33.0
text = "Music composed by "

[node name="Jonathan" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 480.0
margin_right = 697.0
margin_bottom = 33.0
text = "Jonathan"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 74.0
margin_right = 697.0
margin_bottom = 107.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Program" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 81.0
margin_right = 475.0
margin_bottom = 33.0
text = "Programmed by "

[node name="Renzo" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 479.0
margin_right = 616.0
margin_bottom = 33.0
text = "Renzo"

[node name="Back" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 697.0
margin_bottom = 160.0
mouse_filter = 1
text = "BACK"
align = 1

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="gui_input" from="CenterContainer/VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_mouse_exited"]
